# mygui

./: CMakeLists.txt  README.md  calibration_dlg.cpp  calibration_dlg.h  calibration_dlg.ui  function_setting_dlg.cpp  function_setting_dlg.h  function_setting_dlg.ui  mainpage.dox  mhGui.pro  myLabel.cpp  myLabel.h  package.xml  widget.cpp  widget.h  widget.ui
include/mygui/: main_window.hpp  qnode.hpp
src/: main.cpp  main_window.cpp  qnode.cpp
ui/: main_window.ui
